renderlist spacing fixed

--- a/client/styles/Homepage.module.scss
+++ b/client/styles/Homepage.module.scss
@@ -51,6 +51,7 @@
     font-size: 3rem;
     font-family: Roboto, sans-serif;
     box-shadow: 0 1rem 2rem rgba($color: black, $alpha: 0.2);
+    margin-bottom: 1rem;
 
     display: flex;
     justify-content: space-between;
