--- a/client/styles/OrderIndex.module.scss
+++ b/client/styles/OrderIndex.module.scss
@@ -39,6 +39,7 @@
       justify-content: space-between;
       align-items: center;
       box-shadow: 0 1rem 2rem rgba($color: black, $alpha: 0.2);
+      margin-bottom: 1rem;
     }
 
     &__empty {
