--- a/client/styles/Show.module.scss
+++ b/client/styles/Show.module.scss
@@ -7,7 +7,7 @@
 
   &__container {
     @include Container;
-    padding-top: 10rem;
+    padding: 10rem 0;
     display: flex;
     justify-content: center;
   }
